# directories

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.sh  compile_flags.txt
directories/include/: choices.h  d_main.h  file_system.h  fl_def.h
directories/include/system/: linux_fs.h  sys_fs.h  win_fs.h
directories/src/: choices.c  d_main.c  file_system.c  main.c
directories/src/system/: linux_fs.c  win_fs.c
